--- a/project/VS2010Express/XBMC.vcxproj.filters
+++ b/project/VS2010Express/XBMC.vcxproj.filters
@@ -22,9 +22,6 @@
     <Filter Include="cores\dvdplayer\DVDCodecs\Video">
       <UniqueIdentifier>{09e9057e-7017-4f3d-b5d3-2f5e9a23a53c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="cores\dvdplayer\DVDCodecs\Video\CrystlHD">
-      <UniqueIdentifier>{e7b05ca6-8989-4b4a-b85a-af3c62361d22}</UniqueIdentifier>
-    </Filter>
     <Filter Include="cores\dvdplayer\DVDCodecs\Overlay">
       <UniqueIdentifier>{cc80e830-cd3b-4790-9d73-b727b997efdc}</UniqueIdentifier>
     </Filter>
@@ -350,18 +347,6 @@
     </ClCompile>
     <ClCompile Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\DXVA.cpp">
       <Filter>cores\dvdplayer\DVDCodecs\Video</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\cpb.c">
-      <Filter>cores\dvdplayer\DVDCodecs\Video\CrystlHD</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\CrystalHD.cpp">
-      <Filter>cores\dvdplayer\DVDCodecs\Video\CrystlHD</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\h264_parser.c">
-      <Filter>cores\dvdplayer\DVDCodecs\Video\CrystlHD</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\nal.c">
-      <Filter>cores\dvdplayer\DVDCodecs\Video\CrystlHD</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Overlay\DVDOverlayCodecCC.cpp">
       <Filter>cores\dvdplayer\DVDCodecs\Overlay</Filter>
@@ -1968,9 +1953,6 @@
     <ClCompile Include="..\..\xbmc\lib\libPython\xbmcmodule\keyboard.cpp">
       <Filter>libraries\libPython\xbmcmodule</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xbmc\lib\libPython\xbmcmodule\language.cpp">
-      <Filter>libraries\libPython\xbmcmodule</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\xbmc\lib\libPython\xbmcmodule\listitem.cpp">
       <Filter>libraries\libPython\xbmcmodule</Filter>
     </ClCompile>
@@ -1981,9 +1963,6 @@
       <Filter>libraries\libPython\xbmcmodule</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xbmc\lib\libPython\xbmcmodule\PythonPlayer.cpp">
-      <Filter>libraries\libPython\xbmcmodule</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\lib\libPython\xbmcmodule\PythonSettings.cpp">
       <Filter>libraries\libPython\xbmcmodule</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xbmc\lib\libPython\xbmcmodule\pyutil.cpp">
@@ -2144,6 +2123,9 @@
     </ClCompile>
     <ClCompile Include="..\..\xbmc\lib\libPython\xbmcmodule\xbmcaddonmodule.cpp">
       <Filter>libraries\libPython\xbmcmodule</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD.cpp">
+      <Filter>cores\dvdplayer\DVDCodecs\Video</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -2341,21 +2323,6 @@
     </ClInclude>
     <ClInclude Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\DXVA.h">
       <Filter>cores\dvdplayer\DVDCodecs\Video</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\bits_reader.h">
-      <Filter>cores\dvdplayer\DVDCodecs\Video\CrystlHD</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\cpb.h">
-      <Filter>cores\dvdplayer\DVDCodecs\Video\CrystlHD</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\CrystalHD.h">
-      <Filter>cores\dvdplayer\DVDCodecs\Video\CrystlHD</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\h264_parser.h">
-      <Filter>cores\dvdplayer\DVDCodecs\Video\CrystlHD</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\nal.h">
-      <Filter>cores\dvdplayer\DVDCodecs\Video\CrystlHD</Filter>
     </ClInclude>
     <ClInclude Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Overlay\DVDOverlay.h">
       <Filter>cores\dvdplayer\DVDCodecs\Overlay</Filter>
@@ -4109,9 +4076,6 @@
     <ClInclude Include="..\..\xbmc\lib\libPython\xbmcmodule\keyboard.h">
       <Filter>libraries\libPython\xbmcmodule</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\xbmc\lib\libPython\xbmcmodule\language.h">
-      <Filter>libraries\libPython\xbmcmodule</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\xbmc\lib\libPython\xbmcmodule\listitem.h">
       <Filter>libraries\libPython\xbmcmodule</Filter>
     </ClInclude>
@@ -4122,9 +4086,6 @@
       <Filter>libraries\libPython\xbmcmodule</Filter>
     </ClInclude>
     <ClInclude Include="..\..\xbmc\lib\libPython\xbmcmodule\PythonPlayer.h">
-      <Filter>libraries\libPython\xbmcmodule</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\xbmc\lib\libPython\xbmcmodule\PythonSettings.h">
       <Filter>libraries\libPython\xbmcmodule</Filter>
     </ClInclude>
     <ClInclude Include="..\..\xbmc\lib\libPython\xbmcmodule\pyutil.h">
@@ -4507,6 +4468,9 @@
     </ClInclude>
     <ClInclude Include="..\..\xbmc\lib\libPython\xbmcmodule\PythonAddon.h">
       <Filter>libraries\libPython\xbmcmodule</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD.h">
+      <Filter>cores\dvdplayer\DVDCodecs\Video</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
